--- a/index.html
+++ b/index.html
@@ -3,53 +3,8 @@
 <html>
 
 <head>
-    <title>Welcome to nginx!</title>
-    <style>
-        body {
-            width: 100%;
-            margin: 0 auto;
-            font-family: Tahoma, Verdana, Arial, sans-serif;
-        }
-
-        .sample-container {
-            margin: 12px auto;
-        }
-
-        .sample-info-list {
-            display: flex;
-            justify-content: center;
-            font-size: 12px;
-            margin-bottom: 8px;
-        }
-
-        .sample-info-list>div {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 8px;
-            padding: 4px 8px;
-            margin-right: 12px;
-        }
-
-        .sample-info-list>div:nth-child(1) {
-            background-color: greenyellow;
-        }
-
-        .sample-info-list>div:nth-child(2) {
-            background-color: green;
-            color: white;
-        }
-
-        .sample-info-list>div:nth-child(3) {
-            background-color: rgb(0, 128, 121);
-            color: white;
-        }
-
-        .description {
-            font-size: 11px;
-            padding: 12px 24px;
-        }
-    </style>
+    <title>動画サイズ調査</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
