--- a/index.html
+++ b/index.html
@@ -3,147 +3,10 @@
 <html>
 
 <head>
-    <title>動画サイズ調査</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-    <!-- <div class="sample-container">
-        <div class="sample-info-list">
-            <div>sampleId: 0</div>
-            <div>size: 745KB</div>
-            <div>diff: -</div>
-        </div>
-
-        <div class="description">
-            現状。
-        </div>
-
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1fee4e024649802fd75c1bac78842b04b'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
-    </div> -->
-
-
-    <!-- <div class="sample-container">
-        <div class="sample-info-list">
-            <div>sampleId: 1</div>
-            <div>size: 275KB</div>
-            <div>diff: -63.5%</div>
-        </div>
-
-        <div class="description">
-            現状から動画の幅と高さを-65%したもの。
-            bitrateもそれに合わせてさげた。
-        </div>
-
-
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1186b6a91f739d0feac8cf74b6ea304d6'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
-    </div> -->
-
-
-    <!-- <div class="sample-container">
-        <div class="sample-info-list">
-            <div>sampleId: 2</div>
-            <div>size: 96KB</div>
-            <div>diff: -87.3%</div>
-        </div>
-
-        <div class="description">
-            現状から動画の幅と高さを-65%したもの。
-            1に比べ、bitrateを大幅に下げた。
-        </div>
-
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f10e7fc94778234c88adc5d20e92313d3d'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
-    </div> -->
-
-
-
-    <!-- <div class="sample-container">
-        <div class="sample-info-list">
-            <div>sampleId: 3</div>
-            <div>size: 97KB</div>
-            <div>diff: -87.1%</div>
-        </div>
-
-        <div class="description">
-            現状から動画の幅と高さを-65%したもの。
-            2と同じbitrateで、framerateを20に下げた。
-        </div>
-
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f109a9b759a5fc9ef1f88f67b0ff369cd4'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
-    </div> -->
-
-    <!-- 
-    <div class="sample-container">
-        <div class="sample-info-list">
-            <div>sampleId: 4</div>
-            <div>size: 191KB</div>
-            <div>diff: -74.7%</div>
-        </div>
-
-        <div class="description">
-            現状から動画の幅と高さを-65%したもの。
-            2がカクついていたので、bitrateを2倍の100にした。
-        </div>
-
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1d13ad96ae67a11baec5ab1836e9da1f9'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
-    </div> -->
-
-    <!-- <div class="sample-container">
-        <div class="sample-info-list">
-            <div>sampleId: 5</div>
-            <div>size: 232KB</div>
-            <div>diff: -69.2%</div>
-        </div>
-
-        <div class="description">
-            現状から動画の幅と高さを-65%したもの。
-            2がカクついていたので、bitrateを2倍の125にした。
-        </div>
-
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1e66afffd60c501a726684593ec659a77'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
-    </div> -->
-
-    <!-- <div class="sample-container">
-        <div class="sample-info-list">
-            <div>sampleId: 6</div>
-            <div>size: 573KB</div>
-            <div>diff: -24.0%</div>
-        </div>
-
-        <div class="description">
-            現状から動画の幅と高さを-65%したもの。
-            bitrateは動画サイズが75%くらいになる330kに。
-        </div>
-
-
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1b92be982d3a1be47b5b67de73a3bb619'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
-    </div> -->
-
-
-
-    <div class="sample-container">
-        <div class="sample-info-list">
-            <div>sampleId: 7</div>
-            <div>size: 386KB</div>
-            <div>diff: -48.8%</div>
-        </div>
-
-        <div class="description">
-            現状から動画の幅と高さを-65%したもの。
-            bitrateは動画サイズが50%くらいになる330kに。
-        </div>
-
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f12a0921f8a81f7abcc70fad823eaba44a'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
-    </div>
-
+    Hello!
 </body>
 
 </html>
