--- a/1/sample_4.html
+++ b/1/sample_4.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>動画サイズ調査</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="../main.css">
 </head>
 
 <body>
