--- a/1/sample_0.html
+++ b/1/sample_0.html
@@ -11,8 +11,10 @@
     <div class="sample-container">
         <div class="sample-info-list">
             <div>sampleId: 0</div>
-            <div>size: 745KB</div>
+            <div>640x360</div>
+            <div>size: 761KB</div>
             <div>diff: -</div>
+            <div>bitrate: 445k</div>
         </div>
 
         <div class="description">
