--- a/1/sample_3.html
+++ b/1/sample_3.html
@@ -11,13 +11,15 @@
     <div class="sample-container">
         <div class="sample-info-list">
             <div>sampleId: 3</div>
-            <div>size: 97KB</div>
-            <div>diff: -87.1%</div>
+            <div>224x126</div>
+            <div>size: 94</div>
+            <div>diff: -87.7%</div>
+            <div>bitrate: 50k</div>
         </div>
 
         <div class="description">
             現状から動画の幅と高さを-65%したもの。
-            2と同じbitrateで、framerateを20に下げた。
+            他のと違って、framerateを20に下げた。(他は30.)
         </div>
 
         <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f109a9b759a5fc9ef1f88f67b0ff369cd4'></div>
