--- a/1/sample_4.html
+++ b/1/sample_4.html
@@ -11,13 +11,14 @@
     <div class="sample-container">
         <div class="sample-info-list">
             <div>sampleId: 4</div>
-            <div>size: 191KB</div>
-            <div>diff: -74.7%</div>
+            <div>224x126</div>
+            <div>size: 183KB</div>
+            <div>diff: -76.0%</div>
+            <div>bitrate: 100k</div>
         </div>
 
         <div class="description">
             現状から動画の幅と高さを-65%したもの。
-            2がカクついていたので、bitrateを2倍の100にした。
         </div>
 
         <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1d13ad96ae67a11baec5ab1836e9da1f9'></div>
