--- a/1/sample_5.html
+++ b/1/sample_5.html
@@ -11,13 +11,14 @@
     <div class="sample-container">
         <div class="sample-info-list">
             <div>sampleId: 5</div>
-            <div>size: 232KB</div>
-            <div>diff: -69.2%</div>
+            <div>224x126</div>
+            <div>size: 226KB</div>
+            <div>diff: -70.3%</div>
+            <div>bitrate: 125k</div>
         </div>
 
         <div class="description">
             現状から動画の幅と高さを-65%したもの。
-            2がカクついていたので、bitrateを2倍の125にした。
         </div>
 
         <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1e66afffd60c501a726684593ec659a77'></div>
