--- a/1/sample_6.html
+++ b/1/sample_6.html
@@ -11,13 +11,14 @@
     <div class="sample-container">
         <div class="sample-info-list">
             <div>sampleId: 6</div>
-            <div>size: 573KB</div>
-            <div>diff: -24.0%</div>
+            <div>224x126</div>
+            <div>size: 577KB</div>
+            <div>diff: -24.2%</div>
+            <div>bitrate: 330k</div>
         </div>
 
         <div class="description">
             現状から動画の幅と高さを-65%したもの。
-            bitrateは動画サイズが75%くらいになる330kに。
         </div>
 
 
