--- a/1/sample_7.html
+++ b/1/sample_7.html
@@ -11,8 +11,10 @@
     <div class="sample-container">
         <div class="sample-info-list">
             <div>sampleId: 7</div>
-            <div>size: 386KB</div>
-            <div>diff: -48.8%</div>
+            <div>224x126</div>
+            <div>size: 387KB</div>
+            <div>diff: -49.1%</div>
+            <div>bitrate: 220k</div>
         </div>
 
         <div class="description">
