--- a/1/sample_1.html
+++ b/1/sample_1.html
@@ -11,13 +11,14 @@
     <div class="sample-container">
         <div class="sample-info-list">
             <div>sampleId: 1</div>
-            <div>size: 275KB</div>
-            <div>diff: -63.5%</div>
+            <div>224x126</div>
+            <div>size: 277KB</div>
+            <div>diff: -63.6%</div>
+            <div>bitrate: 155k</div>
         </div>
 
         <div class="description">
             現状から動画の幅と高さを-65%したもの。
-            bitrateもそれに合わせてさげた。
         </div>
 
 
