--- a/1/sample_2.html
+++ b/1/sample_2.html
@@ -11,13 +11,14 @@
     <div class="sample-container">
         <div class="sample-info-list">
             <div>sampleId: 2</div>
-            <div>size: 96KB</div>
-            <div>diff: -87.3%</div>
+            <div>224x126</div>
+            <div>size: 94</div>
+            <div>diff: -87.6%</div>
+            <div>bitrate: 50k</div>
         </div>
 
         <div class="description">
             現状から動画の幅と高さを-65%したもの。
-            1に比べ、bitrateを大幅に下げた。
         </div>
 
         <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f10e7fc94778234c88adc5d20e92313d3d'></div>
