--- a/1/sample_10.html
+++ b/1/sample_10.html
@@ -10,18 +10,18 @@
 <body>
     <div class="sample-container">
         <div class="sample-info-list">
-            <div>sampleId: 7</div>
-            <div>224x126</div>
-            <div>size: 387KB</div>
-            <div>diff: -49.1%</div>
-            <div>bitrate: 220k</div>
+            <div>sampleId: 10</div>
+            <div>640x360</div>
+            <div>size: 205KB</div>
+            <div>diff: -73.0%</div>
+            <div>bitrate: 100k</div>
         </div>
 
         <div class="description">
-            現状から動画の幅と高さを-65%したもの。
         </div>
 
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f12a0921f8a81f7abcc70fad823eaba44a'></div>
+        <!-- AMoAd Zone: [動画サイズ削減PJ_sample_10] -->
+        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1577f8a313044e7f19f44a88bdc43313a'></div>
         <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
     </div>
 </body>
