--- a/3/sample_24.html
+++ b/3/sample_24.html
@@ -10,14 +10,15 @@
 <body>
     <div class="sample-container">
         <div class="sample-info-list">
-            <div>sampleId: 5</div>
-            <div>224x126</div>
-            <div>size: 226KB</div>
-            <div>diff: -70.3%</div>
-            <div>bitrate: 125k</div>
+            <div>sampleId: 24</div>
+            <div>640x360</div>
+            <div>size: 709KB</div>
+            <div>diff: -48.6%</div>
+            <div>bitrate: 220k</div>
         </div>
 
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1e66afffd60c501a726684593ec659a77'></div>
+        <!-- AMoAd Zone: [動画サイズ削減PJ_sample_24] -->
+        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1a7b13ecf431dad9ff6c949cc5664be14'></div>
         <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
     </div>
 </body>
