--- a/3/sample_25.html
+++ b/3/sample_25.html
@@ -10,14 +10,15 @@
 <body>
     <div class="sample-container">
         <div class="sample-info-list">
-            <div>sampleId: 5</div>
+            <div>sampleId: 25</div>
             <div>224x126</div>
-            <div>size: 226KB</div>
-            <div>diff: -70.3%</div>
-            <div>bitrate: 125k</div>
+            <div>size: 707KB</div>
+            <div>diff: -48.8%</div>
+            <div>bitrate: 220k</div>
         </div>
 
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1e66afffd60c501a726684593ec659a77'></div>
+        <!-- AMoAd Zone: [動画サイズ削減PJ_sample_25] -->
+        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f10e725dac6638afaeaa0a5b5d0d1f28fa'></div>
         <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
     </div>
 </body>
