--- a/3/sample_22.html
+++ b/3/sample_22.html
@@ -10,14 +10,15 @@
 <body>
     <div class="sample-container">
         <div class="sample-info-list">
-            <div>sampleId: 5</div>
-            <div>224x126</div>
-            <div>size: 226KB</div>
-            <div>diff: -70.3%</div>
-            <div>bitrate: 125k</div>
+            <div>sampleId: 22</div>
+            <div>640x360</div>
+            <div>size: 1,000KB</div>
+            <div>diff: -27.5%</div>
+            <div>bitrate: 445k</div>
         </div>
 
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1e66afffd60c501a726684593ec659a77'></div>
+        <!-- AMoAd Zone: [動画サイズ削減PJ_sample_22] -->
+        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1cddb111b59f72023d467eff4559db16e'></div>
         <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
     </div>
 </body>
