--- a/3/sample_26.html
+++ b/3/sample_26.html
@@ -10,14 +10,15 @@
 <body>
     <div class="sample-container">
         <div class="sample-info-list">
-            <div>sampleId: 5</div>
-            <div>224x126</div>
-            <div>size: 226KB</div>
-            <div>diff: -70.3%</div>
-            <div>bitrate: 125k</div>
+            <div>sampleId: 26</div>
+            <div>640x360</div>
+            <div>size: 345KB</div>
+            <div>diff: -75.0%</div>
+            <div>bitrate: 100k</div>
         </div>
 
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1e66afffd60c501a726684593ec659a77'></div>
+        <!-- AMoAd Zone: [動画サイズ削減PJ_sample_26] -->
+        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1c322c774691837d4dd68f747c71eae6d'></div>
         <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
     </div>
 </body>
