--- a/4/sample_32.html
+++ b/4/sample_32.html
@@ -20,6 +20,10 @@
         <!-- AMoAd Zone: [動画サイズ削減PJ_sample_32] -->
         <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1b09f6371e835783715035207324eea54'></div>
         <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
+
+        <!-- AMoAd Zone: [動画サイズ削減PJ_sample_32_レクタン] -->
+        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1010326c7c5518de1a905aa61f200db3c'></div>
+        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
     </div>
 </body>
 
