--- a/4/sample_31.html
+++ b/4/sample_31.html
@@ -20,6 +20,10 @@
         <!-- AMoAd Zone: [動画サイズ削減PJ_sample_31] -->
         <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1ec95fcc0e1f08e990081ed47e75b6a08'></div>
         <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
+
+        <!-- AMoAd Zone: [動画サイズ削減PJ_sample_31_レクタン] -->
+        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1ac3f3aced2328369229c561aedf42c44'></div>
+        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
     </div>
 </body>
 
