--- a/1/sample_6.html
+++ b/1/sample_6.html
@@ -23,8 +23,8 @@
         <br>
 
         <!-- AMoAd Zone: [動画サイズ削減PJ_sample_6_レクタン] -->
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f12212d485f4c683c67f302a0d014aeb31'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
+        <!-- <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f12212d485f4c683c67f302a0d014aeb31'></div>
+        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script> -->
     </div>
 </body>
 
