--- a/1/sample_7.html
+++ b/1/sample_7.html
@@ -23,8 +23,8 @@
         <br>
 
         <!-- AMoAd Zone: [動画サイズ削減PJ_sample_7_レクタン] -->
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1266a21b61204862574d818bde8b6b45c'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
+        <!-- <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1266a21b61204862574d818bde8b6b45c'></div>
+        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script> -->
     </div>
 </body>
 
