--- a/1/sample_9.html
+++ b/1/sample_9.html
@@ -24,8 +24,8 @@
         <br>
 
         <!-- AMoAd Zone: [動画サイズ削減PJ_sample_9_レクタン] -->
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f18e6cf83fc04697257f727a960b60e1ea'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
+        <!-- <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f18e6cf83fc04697257f727a960b60e1ea'></div>
+        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script> -->
     </div>
 </body>
 
