--- a/4/sample_35.html
+++ b/4/sample_35.html
@@ -22,8 +22,8 @@
         <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
 
         <!-- AMoAd Zone: [動画サイズ削減PJ_sample_35_レクタン] -->
-        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f15656e607357a42c2fba0b629dadeac2a'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
+        <!-- <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f15656e607357a42c2fba0b629dadeac2a'></div>
+        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script> -->
     </div>
 </body>
 
