--- a/4/sample_30.html
+++ b/4/sample_30.html
@@ -25,9 +25,11 @@
         <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1c0c09c00eaa0dad0157807fbeb432347'></div>
         <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
 
+        <div class="filler">文字文字文字</div>
+
         <!-- AMoAd Zone: [動画サイズ削減PJ_sample_30_レクタン] -->
-        <!-- <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f180c15e10972bc21fcc64000463858823'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script> -->
+        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f180c15e10972bc21fcc64000463858823'></div>
+        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
     </div>
 </body>
 
