--- a/1/sample_0.html
+++ b/1/sample_0.html
@@ -26,9 +26,11 @@
 
         <br>
 
+        <div class="filler">0</div>
+
         <!-- AMoAd Zone: [動画サイズ削減PJ_sample_0_レクタン] -->
-        <!-- <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1dd5454000f9de79a111650d3a7288dcb'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script> -->
+        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1dd5454000f9de79a111650d3a7288dcb'></div>
+        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
     </div>
 </body>
 
