--- a/1/sample_8.html
+++ b/1/sample_8.html
@@ -20,11 +20,11 @@
         <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f1451b912a814abf8abe75c4162b7d3660'></div>
         <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
 
-        <br>
+        <div class="filler">0</div>
 
         <!-- AMoAd Zone: [動画サイズ削減PJ_sample_8_レクタン] -->
-        <!-- <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f11021da34d25c422bf0172eeded2bef0b'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script> -->
+        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f11021da34d25c422bf0172eeded2bef0b'></div>
+        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
 
     </div>
 </body>
