--- a/4/sample_35.html
+++ b/4/sample_35.html
@@ -21,9 +21,11 @@
         <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f107a24482428c5d7ebaa20f2c5b848e19'></div>
         <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
 
+        <div class="filler">0</div>
+
         <!-- AMoAd Zone: [動画サイズ削減PJ_sample_35_レクタン] -->
-        <!-- <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f15656e607357a42c2fba0b629dadeac2a'></div>
-        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script> -->
+        <div class='amoad_native' data-sid='62056d310111552cea984158f19a87f15656e607357a42c2fba0b629dadeac2a'></div>
+        <script src='https://dev1-j.amoad.net/js/n.js' type='text/javascript' charset='utf-8'></script>
     </div>
 </body>
 
